--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,74 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+* {
+  margin: 0;
+  padding: 0;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+nav {
+  background-color: #263752;
+  height: 80px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+nav img {
+  width: 45px;
+  position: relative;
+  right: 5%;
+}
+nav ul {
+  display: flex;
+  justify-content: space-evenly;
+  width: calc(100% - 105px);
+}
+nav ul li {
+  list-style: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logo {
+  width: 50px;
+  border-radius: 50px;
+  height: 50px;
+  position: relative;
+  left: 5%;
 }
+
+.carritoCant {
+  position: absolute;
+  z-index: 2;
+  right: 40px;
+  top: 50px;
+  background-color: rgb(255, 0, 0);
+  text-align: center;
+  width: 21px;
+  border-radius: 10px;
+}
+
+.cartImg {
+  width: 45px;
+  position: relative;
+  right: 5%;
+}
+
+.prdDescription {
+  color: #000;
+}
+
+section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+section img {
+  width: 320px;
+  height: 340px;
+  object-fit: cover;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  border-radius: 20px 20px 0px 0px;
+}
+section p {
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+}
+
+/*# sourceMappingURL=App.css.map */
